Fix responsiveness on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,11 @@ body::-webkit-scrollbar {
   #about,
   #work-experience,
   #projects {
-    width: 90%;
+    width: 95%;
+  }
+  #workExperience {
+    flex-direction: column;
+    align-items: center;
   }
 }
 
