--- a/src/content/projects/projects.css
+++ b/src/content/projects/projects.css
@@ -1,7 +1,6 @@
 #projectsHolder {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(100%, 30rem), 1fr));
   gap: 4rem;
   align-items: stretch;
-  flex-wrap: wrap;
 }
